fix project to run on docker

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-JWT_SECRET='my_secret',
-DB_CONNECTION_STRING=mongodb://127.0.0.1:27017/jgaad
+MONGO_COONECTION_STRING=mongodb://127.0.0.1:27017/jgaad
+JWT_SECRET=your-secret-key
