--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,11 @@ version: '3.8'
 
 services:
   app:
-    build: .
+    build: 
+      context: .      
+    environment:
+      MONGO_COONECTION_STRING: mongodb://db:27017/jgaad
+      JWT_SECRET: "your-secret-key"
     ports:
       - '3000:3000'
     depends_on:
@@ -11,6 +15,4 @@ services:
     image: mongo
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: mongo_user
-      MONGO_INITDB_ROOT_PASSWORD: 123456
       MONGO_INITDB_DATABASE: jgaad
