--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jgaad-notifications",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "sajadkalantari@outllok.com",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -29,7 +29,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
-    "bcrypt": "^5.1.0",
+    "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
